# django_channels_chat

./: .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
src/chat/: consumers.py  urls.py  views.py
src/config/: asgi.py  settings.py  urls.py
src/templates/chat/: index.html  room.html
src/templates/registration/: login.html  register.html
src/users/: admin.py  urls.py  views.py
src/users/migrations/: 0001_initial.py
