[tool.poetry]
name = "django-channels-chat"
version = "0.1.0"
description = ""
authors = ["earlinn <earlinndrow@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
channels = "^4.2.2"
python-dotenv = "^1.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
