[tool.poetry]
name = "django-channels-chat"
version = "0.1.0"
description = ""
authors = ["earlinn <earlinndrow@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
channels = "^4.2.2"
python-dotenv = "^1.1.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.2.0"
isort = "^6.0.1"
pep8-naming = "^0.15.0"
flake8-broken-line = "^1.0.0"
flake8-return = "^1.2.0"
flake8-isort = "^6.1.2"
black = "^25.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
