[project]
name = "django-channels-chat"
version = "0.1.0"
description = ""
authors = [
    {name = "earlinn"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "channels (>=4.2.2,<5.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "channels-redis (>=4.2.1,<5.0.0)",
    "uvicorn[standard] (>=0.34.2,<0.35.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.2.0"
isort = "^6.0.1"
pep8-naming = "^0.15.1"
flake8-broken-line = "^1.0.0"
flake8-return = "^1.2.0"
flake8-isort = "^6.1.2"
black = "^25.1.0"

